--- a/css-animations/transitions.html
+++ b/css-animations/transitions.html
@@ -5,16 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Keyframes & Animation</title>
-  <link rel="stylesheet" href="keyframes.css">
+  <title>Transitions CSS</title>
+  <link rel="stylesheet" href="transitions.css">
 </head>
 
 <body>
-  <div class="box">
-
-  </div>
-
-  <a href="transitions.html"> click for transitions examples</a>
+  <div class="box"></div>
 </body>
 
 </html>
